syntax = "proto3";
package acc_engineer.rpc;
import "google/protobuf/descriptor.proto";

extend google.protobuf.MessageOptions {
  optional uint64 cmd_id = 50000;
}

message Cookie
{
	uint64 system_error_code = 1;
	uint64 logic_error_code = 2;
	uint64 trace_id = 3;
}

message NullResponse
{
}
