syntax = "proto3";
package acc_engineer;


message Request
{
  bytes id = 1;
  bytes ticket = 2;
  uint64 timestamp = 3;

  oneof request
  {
    AuthenticationRequest authentication_request = 100;
    ClientReconnectionRequest client_reconnection_request = 101;
  }
}

message Response
{
  bytes id = 1;
  uint64 timestamp = 2;
  uint64 error_code = 3;
  string error_message = 4;

  oneof response
  {
      AuthenticationResponse authentication_response = 100;
      ClientReconnectionResponse  client_reconnection_response = 101;
  }
}

message AuthenticationRequest
{
  string username = 1;
  string password = 2;
  string lobby = 3;
}

message AuthenticationResponse
{
  string ticket = 1;
  uint64 id = 2;

  int64 error_code = 100;
  string error_message = 101;
}

message ClientReconnectionRequest
{
}

message ClientReconnectionResponse
{
}